--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -75,11 +75,34 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 <object width="100%" height="100%" type="text/html" data="./pie.html" border="1" > </object>
 ---
 
-<object width="100%" height="100" type="text/html" data="./jitter.html" border="1" > </object>
-
+<object width="100%" height="100%" type="text/html" data="./jitter.html" border="1" > </object>
 
 ---
 
+<img src="./box_plot.png" alt="" id="slide_img5" width="100%" height="100%" >
+
+---
+
+<img src="./swarm_plot.png" alt="" id="slide_img6" width="100%" height="100%">
+
+---
+
+<img src="./mean_plot.png" alt="" id="slide_img7" width="100%" height="100%">
+
+---
+
+<img src="./heatmap_1.png" alt="" id="slide_img8" width="100%" height="100%">
+
+---
+
+<img src="./heatmap_2.png" alt="" id="slide_img9" width="100%" height="100%">
+
+---
+<img src="./cat_plot.png" alt="" id="slide_img10" width="100%" height="100%">
+
+---
+<img src="./counter_plot.png" alt="" id="slide_img11" width="100%" height="100%">
+---
 # Installation
 ```bash
 Project/
