Renamed the box plot and swarm plot

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -90,7 +90,7 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 <img src="./mean_plot.png" alt="" id="slide_img7" width="100%" height="100%">
 
 ---
-
+#### Supported Andoid Version
 <img src="./heatmap_1.png" alt="" id="slide_img8" width="100%" height="100%">
 
 ---
