plotted jitter bokeh plot and created jitter.py with two functions

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -73,6 +73,9 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 ---
 
 <object width="100%" height="100%" type="text/html" data="./pie.html" border="1" > </object>
+
+---
+<object width="100%" height="100%" type="text/html" data="./jitter.html" border="1"> </object>
 ---
 
 <img src="./box_plot.png" alt="" id="slide_img5" width="100%" height="100%" >
