updated the objective page

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -37,18 +37,19 @@ Sarker, Sourav (souravs)
 
 Yazdanpanah, Fatemeh (fyazdanpanah)
 
----
 
-# Agenda
-
-1. Introduction
-2. Deep-dive
-3. ...
 
 ---
 # Project Objectives
-1. To analyze the Play Store App data
-2. To determine app trends
+* To analyze the Play Store App data
+
+* To determine app trends
+
+* To compare the year to year application history
+
+* To visualize the which application category supports which version of OS
+
+* To inspect which month of the year, the applications got their last update most
 
 ---
 # Summary
