--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -81,6 +81,9 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 
 <img src="./box_plot.png" alt="" id="slide_img5" width="100%" height="100%" >
 
+* Apps for "Everyone 10+" users have higher consistency of getting reviews.
+* "Everyone 10+" has higher median values.
+* Everyone has a high outliers.
 ---
 
 <img src="./mean_plot.png" alt="" id="slide_img7" width="100%" height="100%">
