--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -83,7 +83,7 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 
 * Apps for "Everyone 10+" users have higher consistency of getting reviews.
 * "Everyone 10+" has higher median values.
-* Everyone has a high outliers.
+* "Everyone" has a high outliers.
 ---
 
 <img src="./mean_plot.png" alt="" id="slide_img7" width="100%" height="100%">
