adding jitter2 into presentation file

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -109,6 +109,9 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 
 <img src="./pie_plot_freeApp.png" alt="" id="slide_img10" width="100%" height="100%">
 ---
+
+<object width="100%" height="100%" type="text/html" data="./jitter2.html" border="1"> </object>
+
 # Installation
 ```bash
 Project/
