--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -111,6 +111,9 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 ---
 
 <object width="100%" height="100%" type="text/html" data="./jitter2.html" border="1"> </object>
+---
+<object width="100%" height="100%" type="text/html" data="./average_size.html" border="1"> </object>
+---
 
 # Installation
 ```bash
