adding bar_scatter_plot_rating.png in presentation slide

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -72,10 +72,6 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 <img src="./osVer_figure.png" alt="" id="slide_img5">
 
 ---
-
-<object width="100%" height="100%" type="text/html" data="./pie.html" border="1" > </object>
-
----
 <object width="100%" height="100%" type="text/html" data="./jitter.html" border="1"> </object>
 ---
 
@@ -104,16 +100,22 @@ Yazdanpanah, Fatemeh (fyazdanpanah)
 <img src="./counter_plot.png" alt="" id="slide_img11" width="100%" height="100%">
 
 ---
-<img src="./cat_plot.png" alt="" id="slide_img10" width="100%" height="100%">
----
+
 
 <img src="./pie_plot_freeApp.png" alt="" id="slide_img10" width="100%" height="100%">
 ---
 
 <object width="100%" height="100%" type="text/html" data="./jitter2.html" border="1"> </object>
 ---
+
+<object width="100%" height="100%" type="text/html" data="./pie.html" border="1" > </object>
+---
+<img src="./cat_plot.png" alt="" id="slide_img10" width="100%" height="100%">
+---
 <object width="100%" height="100%" type="text/html" data="./average_size.html" border="1"> </object>
 ---
+<img src="./bar_scatter_plot_rating.png" alt="" id="slide_img10" width="100%" height="100%">
+
 
 # Installation
 ```bash
