only 2 slides left in code slides

--- a/Project/Presentation/index2.html
+++ b/Project/Presentation/index2.html
@@ -181,11 +181,16 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 4. def testLicense() == tests download.py
 
 ---
-# Bonus Scripts: Shell Scripts
+# Bonus 
 
 * checkfs.sh == alternative to make
 
 * kagglecheck.sh == Generates a kaggle key
+
+* Jupyter Notebooks == used solely for testing purposes
+  * cleaned_data-Copy1.ipynb
+  * project.ipynb
+  * Project_ver_1.0.ipynb
 
 
     </textarea>
