--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -187,9 +187,15 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 ---
 # post_processing.py
 
+* Requires dataClean.py to be run first
+* Generates more advance data insights
+* Generates the Pie interactive graph
+* Other Graphs Generated: Box Plot, Mean Plot, Swarmplot, Two Heatmaps, Cat Plot and Count Plot.
+
 ---
 # jitter.py
-
+* Takes cleaned data from dataClean.py.
+* Generates interactive Jitter plot.
 ---
 # test.py
 
