--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Group 1</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
@@ -192,7 +192,6 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 * Generates the Pie interactive graph
 * Other Graphs Generated: Box Plot, Mean Plot, Swarmplot, Two Heatmaps, Cat Plot and Count Plot.
 
----
 # jitter.py
 * Takes cleaned data from dataClean.py.
 * Generates interactive Jitter plot.
@@ -284,7 +283,7 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 
 
 ---
-
+Plotted
 | Name        | Worked on           | 
 | ------------- |:-------------:|
 | Aida      | Latex, Presentation, README.md, jitter.py, post_processing.py | 
@@ -300,8 +299,7 @@ class: center, middle
 
 
     </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js">
-    </script>
+    <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script>
       var slideshow = remark.create();
     </script>
