--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -283,7 +283,8 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 
 
 ---
-Plotted
+
+# Contributions
 | Name        | Worked on           | 
 | ------------- |:-------------:|
 | Aida      | Latex, Presentation, README.md, jitter.py, post_processing.py | 
