added android image

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -38,6 +38,7 @@ Sarker, Sourav (souravs)
 Yazdanpanah, Fatemeh (fyazdanpanah)
 
 
+<img src="./android.png" alt="" id="slide_img125" >
 
 ---
 # Project Objectives
@@ -267,7 +268,7 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 ---
 <object width="100%" height="100%" type="text/html" data="./average_size.html" border="1"> </object>
 ---
-<img src="./bar_scatter_plot_rating.png" alt="" id="slide_img10" width="100%" height="100%">
+<img src="./bar_scatter_plot_Rating.png" alt="" id="slide_img11" width="100%" height="100%">
 ---
 <img src="./pie_plot_freeApp.png" alt="" id="slide_img10" width="100%" height="100%">
 ---
