--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -285,14 +285,20 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 
 ---
 
-# Contributions
-| Name        | Worked on           | 
-| ------------- |:-------------:|
-| Aida      | Latex, Presentation, README.md, jitter.py, post_processing.py | 
-| Carlos      | README.md, makefile, shell scripts, download.py, histograms.py, cleandata.py      | 
-| Sourav | Jupyter Notebooks to help with histograms.py and post_processing, and jitter.py       |   
-| Fatemeh | Latex, Presentation, README.md, post_processing.py |  
+# Contributions 
 
+#### Aida
+* Latex, Presentation, README.md, jitter2.py & avg_size_category.py
+
+#### Carlos
+* makefile, shell scripting, download.py, cleandata.py, histogram.py
+
+#### Sourav
+* Coded with Jupyter Notebook for Project_ver_1.ipynb, post_processing.py & jitter.py
+* Bokeh Pie and jitter plot, Box plot, Mean plot, Count Plot, Cat Plot, Heatmap
+
+#### Fatemeh 
+* Latex, Presentation, README.md, Pie plot, jitter2.py & avg_size_category.py
 
 ---
 
