Edited description of two newly created .py file

--- a/Project/Presentation/index.html
+++ b/Project/Presentation/index.html
@@ -186,16 +186,24 @@ Group 1 - CMSC6950 - Memorial University of Newfoundland
 ```
 
 ---
-# post_processing.py
+#### post_processing.py
 
 * Requires dataClean.py to be run first
 * Generates more advance data insights
 * Generates the Pie interactive graph
 * Other Graphs Generated: Box Plot, Mean Plot, Swarmplot, Two Heatmaps, Cat Plot and Count Plot.
 
-# jitter.py
+#### jitter.py
 * Takes cleaned data from dataClean.py.
 * Generates interactive Jitter plot.
+
+#### avg_size_category.py
+* Takes cleaned data from dataClean.py.
+* Generates interactive bar graph of average application size by category.
+
+#### jitter2.py
+* Takes cleaned data from dataClean.py.
+* Generates interactive Jitter plot of no. of applications vs price.
 ---
 # test.py
 
